--- a/src/app/components/item-list/list/item-list.component.html
+++ b/src/app/components/item-list/list/item-list.component.html
@@ -26,12 +26,21 @@
           <td class="px-6 py-4 text-sm text-gray-600">{{ item.body }}</td>
           <td class="px-6 py-4 text-sm">
             <div class="flex gap-2">
+              <button class="bg-green-500 hover:bg-green-600 text-white px-3 py-1 rounded-md transition"
+                (click)="viewItem(item.id)">
+                View
+              </button>
               <button class="bg-yellow-500 hover:bg-yellow-600 text-white px-3 py-1 rounded-md transition"
-                (click)="router.navigate(['/', item.id, 'edit'])">Edit</button>
+                (click)="router.navigate(['/', item.id, 'edit'])">
+                Edit
+              </button>
               <button class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded-md transition"
-                (click)="deleteItem(item.id)">Delete</button>
+                (click)="deleteItem(item.id)">
+                Delete
+              </button>
             </div>
           </td>
+          
         </tr>
       </tbody>
     </table>
