--- a/src/app/components/item-list/update/item-list-update.component.html
+++ b/src/app/components/item-list/update/item-list-update.component.html
@@ -14,8 +14,8 @@
     </div>
 
     <div>
-      <label for="description" class="block text-gray-700 font-medium">Description</label>
-      <textarea id="description" formControlName="description"
+      <label for="body" class="block text-gray-700 font-medium">Description</label>
+      <textarea id="body" formControlName="body"
         class="w-full px-4 py-2 border rounded-md focus:ring-2 focus:ring-blue-400 outline-none"></textarea>
     </div>
 
